--- a/razas.html
+++ b/razas.html
@@ -579,7 +579,7 @@
 <body>
   <div class="container">
     <header class="header">
-      <a href="../">
+      <a href="https://z95b.github.io/dyp">
         <h1 class="title">Dragonas y Perronas</h1>
       </a>
     </header>
