--- a/razas.html
+++ b/razas.html
@@ -620,7 +620,7 @@
     <!-- Loading spinner container -->
     <div id="loadingContainer" class="loading-container">
       <div class="spinner"></div>
-      <p class="loading-text">Cargando razas...</p>
+      <p class="loading-text">...Bitch, you know I'm sexy...</p>
     </div>
 
     <div id="contentContainer" style="display: none;">
