--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
             <a href="razas.html" class="menu-button" target="_blank">
                 <span>RAZAS</span>
             </a>
+            
             <a href="https://docs.google.com/document/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit?usp=sharing" class="menu-button" target="_blank">
                 <span>CLASES</span>
             </a>
@@ -239,6 +240,9 @@
             </a>
             <a href="reglas.html" class="menu-button" target="_blank">
                 <span>GUÍA DND</span>
+            </a>
+            <a href="https://drive.google.com/drive/folders/1dKsxF_uaKsMfyir1W2W6BmI5C9AqkFRs" class="menu-button" target="_blank">
+                <span>S'Arxiu des Goblin</span>
             </a>
         </div>
         <a href="#background" class="scroll-arrow">↓</a>
