--- a/razas.html
+++ b/razas.html
@@ -884,8 +884,17 @@
                 ${Array.from({ length: 6 }, (_, i) => i + 1).map(size => `
                   <div style="height:${size * 10}px" class="size-box ${race.sizes.includes(size) ? 'active' : ''}" 
                        title="${getSizeLabel(size)}"></div>
+                                             ${size == 1? '0.05</br>0.49':''}
+                                             ${size == 2? '0.5</br>1.39':''}
+                                             ${size == 3? '1.4</br>1.89':''}
+                                             ${size == 4? '1.9</br>2.29':''}
+                                             ${size == 5? '2.3</br>3.99':''}
+                                             ${size == 6? '>4</br>':''}
+
+
                 `).join('')}
-             
+              
+
               </div>
             </div>
           </div>
