--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
     <div class="content">
         <header>
-            <h1>DRAGONES & PERROS</h1>
+            <h1>DRAGONAS Y PERRONES</h1>
 
 
         </header>
