--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>D&D Menu</title>
+    <title>D&P Menu</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&family=Spectral:wght@400;600&display=swap"
         rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="media/ico.ico" />
 
     <style>
         /* Global Styles */
@@ -332,6 +333,7 @@
         </header>
 
         <main class="menu-container">
+            
             <div class="categories-container">
                 <ul id="categories" class="categories"></ul>
             </div>
