--- a/index.html
+++ b/index.html
@@ -511,8 +511,8 @@
 
                     // Fallback to sample data if CSV loading fails
                     return [
-                        { category: "Fichas", label: "FICHA ESTÁNDAR", url: "#", action: "descargarFichaEstandar", target: "_self" },
-                        { category: "Fichas", label: "FICHA COMPACTA", url: "#", action: "descargarFichaCompacta", target: "_self" },
+                        { category: "Fichas", label: "FICHA ESTÁNDAR DnD", url: "#", action: "descargarFichaEstandar", target: "_self" },
+                        { category: "Fichas", label: "FICHA COMPACTA DyP", url: "#", action: "descargarFichaCompacta", target: "_self" },
                         { category: "Personajes", label: "RAZAS", url: "razas.html", target: "_blank" },
                         { category: "Personajes", label: "CLASES", url: "https://docs.google.com/document/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit?usp=sharing", target: "_blank" },
                         { category: "Personajes", label: "CASINO STATS", url: "stats.html", target: "_blank" },
